--- a/OttoMail/src/OttoMail/Views/Home/Index.cshtml
+++ b/OttoMail/src/OttoMail/Views/Home/Index.cshtml
@@ -1,9 +1,7 @@
-﻿<html>
-<head>
-    <title>OttoMail</title>
-</head>
-<body>
-    <h2>Welcome to OttoMail</h2>
-    <p>@Html.ActionLink("User List", "Index", "Users")</p>
-</body>
-</html>
+﻿@{ 
+    ViewData["Title"] = "OttoMail";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h2>Welcome to OttoMail</h2>
+<p>@Html.ActionLink("User List", "Index", "Users")</p>
