--- a/OttoMail/src/OttoMail/Views/Users/Index.cshtml
+++ b/OttoMail/src/OttoMail/Views/Users/Index.cshtml
@@ -1,18 +1,17 @@
-﻿@model IEnumerable<OttoMail.Models.User>
+﻿@{
+    ViewData["Title"] = "OttoMail";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-<html>
-<head>
-    <title>OttoMail</title>
-</head>
-<body>
-    <h2>OttoMail</h2>
-    <h4>@Html.DisplayNameFor(model => model.UserName)</h4>
-    <ul>
-        @foreach(var listUser in Model)
-        {
-            <li>@Html.DisplayFor(modelUser => listUser.UserName) | @Html.ActionLink("Details", "Details", new { id = listUser.UserId })</li>
+@model IEnumerable<OttoMail.Models.User>
+
+<h2>OttoMail</h2>
+<h4>@Html.DisplayNameFor(model => model.UserName)</h4>
+<ul>
+    @foreach(var listUser in Model)
+    {
+        <li>@Html.DisplayFor(modelUser => listUser.UserName) | @Html.ActionLink("Details", "Details", new { id = listUser.UserId }) | @Html.ActionLink("Edit", "Edit", new { id = listUser.UserId }) | @Html.ActionLink("Delete", "Delete", new { id = listUser.UserId })</li>
       
-        }
-    </ul>
-</body>
-</html>
+    }
+</ul>
+<p>@Html.ActionLink("Add new user", "Create")</p>
