Add link to register user.

--- a/OttoMail/src/OttoMail/Views/Account/Index.cshtml
+++ b/OttoMail/src/OttoMail/Views/Account/Index.cshtml
@@ -3,7 +3,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@model IEnumerable<OttoMail.Models.User>
+<h2>OttoMail</h2>
+<p>@Html.ActionLink("Register", "Register"</p>
+
+@*@model IEnumerable<OttoMail.Models.User>
 
 <h2>OttoMail</h2>
 <h4>@Html.DisplayNameFor(model => model.UserName)</h4>
@@ -14,4 +17,4 @@
       
     }
 </ul>
-<p>@Html.ActionLink("Add new user", "Create")</p>
+<p>@Html.ActionLink("Add new user", "Create")</p>*@
