Add Email tests for DateTime and Body.

--- a/OttoMail/src/OttoMail/Views/Email/Index.cshtml
+++ b/OttoMail/src/OttoMail/Views/Email/Index.cshtml
@@ -16,7 +16,7 @@
     <ul>
         @foreach (var listEmail in Model)
         {
-            <li>@Html.DisplayFor(modelEmail => listEmail.Subject)</li>
+            <li>@Html.DisplayFor(modelEmail => listEmail.Date) | @Html.DisplayFor(modelEmail => listEmail.Subject)</li>
         }
     </ul>
 }
