--- a/OttoMail/src/OttoMail/Views/Shared/_Layout.cshtml
+++ b/OttoMail/src/OttoMail/Views/Shared/_Layout.cshtml
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="~/css/styles.css" />
 </head>
 <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#ottomail-navbar-collapse" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">OttoMail</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="ottomail-navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Account</a></li>
+                    <li><a href="#">Logout</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div>
         @RenderBody()
     </div>
