--- a/OttoMail/src/OttoMail/Views/Shared/_Layout.cshtml
+++ b/OttoMail/src/OttoMail/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/styles.css" />
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#ottomail-navbar-collapse" aria-expanded="false">
@@ -19,15 +19,27 @@
                 </button>
                 <a class="navbar-brand" href="#">OttoMail</a>
             </div>
-
+            
             <div class="collapse navbar-collapse" id="ottomail-navbar-collapse">
+                
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <div class="input-group input-group-sm">
+                            <input type="text" class="form-control" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="button">Search</button>
+                            </span>
+                        </div>
+                    </div>
+                </form>
+                
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Account</a></li>
                     <li><a href="#">Logout</a></li>
                 </ul>
             </div>
         </div>
-    </nav>
+    </div>
     <div>
         @RenderBody()
     </div>
