--- a/OttoMail/src/OttoMail/Views/Shared/_Layout.cshtml
+++ b/OttoMail/src/OttoMail/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">OttoMail</a>
+                @Html.ActionLink("OttoMail", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             
             <div class="collapse navbar-collapse" id="ottomail-navbar-collapse">
@@ -32,11 +32,7 @@
                         </div>
                     </div>
                 </form>
-                
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Account</a></li>
-                    <li><a href="#">Logout</a></li>
-                </ul>
+                @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
     </div>
