--- a/OttoMail/src/OttoMail/Views/Account/Index.cshtml
+++ b/OttoMail/src/OttoMail/Views/Account/Index.cshtml
@@ -5,19 +5,42 @@
 
 @using System.Security.Claims
 
-<h2>OttoMail</h2>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.ajax({
+            type: 'GET',
+            dataType: 'html',
+            url: '@Url.Action("Index", "Email")',
+            success: function (result) {
+                $('#result1').html(result);
+
+            }
+
+        })
+
+    })
+</script>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-2">
+            <button class="btn btn-primary">Compose</button>
+        </div>
+        <div class="col-sm-10">
+            <div id="email"></div>
+            <div id="result1"></div>
+        </div>
+    </div>
+
+</div>
+
 @if (User.IsSignedIn())
-{
+            {
     <p>Welcome to OttoMail, @User.GetUserName()!</p>
-    @using (Html.BeginForm("LogOff", "Account"))
-    {
-        <input type="submit" value="Logout" />
-    }
+
 }
 else
 {
     <p>@Html.ActionLink("Register", "Register")</p>
-    <p>@Html.ActionLink("Login", "Login")</p>
+                <p>@Html.ActionLink("Login", "Login")</p>
 }
-
-
