--- a/OttoMail/src/OttoMail/Views/Email/Compose.cshtml
+++ b/OttoMail/src/OttoMail/Views/Email/Compose.cshtml
@@ -15,6 +15,6 @@
 
 
 
-    <input type="submit" value="Compose" />
+    <input id="compose" type="submit" value="Compose" />
 }
 @Html.ActionLink("Back to Inbox", "Index")
