--- a/OttoMail/src/OttoMail/Views/Account/Register.cshtml
+++ b/OttoMail/src/OttoMail/Views/Account/Register.cshtml
@@ -11,6 +11,12 @@
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
+    @Html.LabelFor(m => m.FirstName)
+    @Html.TextBoxFor(m => m.FirstName)
+
+    @Html.LabelFor(m => m.LastName)
+    @Html.TextBoxFor(m => m.LastName)
+
     @Html.LabelFor(m => m.Email)
     @Html.TextBoxFor(m => m.Email)
 
