--- a/OttoMail/src/OttoMail/Views/Account/Login.cshtml
+++ b/OttoMail/src/OttoMail/Views/Account/Login.cshtml
@@ -5,16 +5,19 @@
 @using OttoMail.ViewModels
 
 @model LoginViewModel
+<div class="container-fluid">
+    <h2>Login to OttoMail</h2>
 
-<h2>Login to OttoMail</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.LabelFor(m => m.Email)
-    @Html.TextBoxFor(m => m.Email)
-
-    @Html.LabelFor(m => m.Password)
-    @Html.PasswordFor(m => m.Password)
-
-    <input type="submit" value="Log in" />
-}
+    @using (Html.BeginForm())
+    {
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email)
+            @Html.TextBoxFor(m => m.Email)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Password)
+            @Html.PasswordFor(m => m.Password)
+        </div>
+        <button type="submit" value="Log in" class="btn btn-primary">Login</button>
+    }
+</div>
