--- a/OttoMail/src/OttoMail/Views/Account/Register.cshtml
+++ b/OttoMail/src/OttoMail/Views/Account/Register.cshtml
@@ -6,25 +6,32 @@
 @using OttoMail.ViewModels
 
 @model RegisterViewModel
+<div class="container-fluid">
+    <h2>Register for OttoMail</h2>
 
-<h2>Register for OttoMail</h2>
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+        {
+            <div class="form-group">
+                @Html.LabelFor(m => m.FirstName)
+                @Html.TextBoxFor(m => m.FirstName)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.LastName)
+                @Html.TextBoxFor(m => m.LastName)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Email)
+                @Html.TextBoxFor(m => m.Email)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password)
+                @Html.TextBoxFor(m => m.Password)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.ConfirmPassword)
+                @Html.TextBoxFor(m => m.ConfirmPassword)
+            </div>
+            <button type="submit" value="Register" class="btn btn-primary">Register</button>
+    }
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post))
-{
-    @Html.LabelFor(m => m.FirstName)
-    @Html.TextBoxFor(m => m.FirstName)
-
-    @Html.LabelFor(m => m.LastName)
-    @Html.TextBoxFor(m => m.LastName)
-
-    @Html.LabelFor(m => m.Email)
-    @Html.TextBoxFor(m => m.Email)
-
-    @Html.LabelFor(m => m.Password)
-    @Html.TextBoxFor(m => m.Password)
-    
-    @Html.LabelFor(m => m.ConfirmPassword)
-    @Html.TextBoxFor(m => m.ConfirmPassword)
-
-    <input type="submit" value="Register" />
-}
+</div>
