--- a/OttoMail/src/OttoMail/Views/Email/Delete.cshtml
+++ b/OttoMail/src/OttoMail/Views/Email/Delete.cshtml
@@ -2,9 +2,11 @@
     ViewData["Title"] = "Inbox";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container-fluid">
+    <h2>Are you sure you want to delete this?</h2>
+    @using (Html.BeginForm())
+    {
+        <button type="submit" value="Delete" class="btn btn-danger">Delete</button>
+    }
 
-<h2>Are you sure you want to delete this?</h2>
-@using (Html.BeginForm())
-{
-    <input type="submit" value="Delete" />
-}
+</div>
