--- a/OttoMail/src/OttoMail/Views/Email/Details.cshtml
+++ b/OttoMail/src/OttoMail/Views/Email/Details.cshtml
@@ -4,9 +4,10 @@
 }
 
 @model OttoMail.Models.Email
+<div class="container-fluid">
 
+    <p>@Html.DisplayNameFor(model => model.Subject): @Html.DisplayFor(model => model.Subject)</p>
+    <p>@Html.DisplayNameFor(model => model.Date): @Html.DisplayFor(model => model.Date)</p>
+    <p>@Html.DisplayNameFor(model => model.Body): @Html.DisplayFor(model => model.Body)</p>
 
-<p>@Html.DisplayNameFor(model => model.Subject): @Html.DisplayFor(model => model.Subject)</p>
-<p>@Html.DisplayNameFor(model => model.Date): @Html.DisplayFor(model => model.Date)</p>
-<p>@Html.DisplayNameFor(model => model.Body): @Html.DisplayFor(model => model.Body)</p>
-
+</div>
